--- a/sty.css
+++ b/sty.css
@@ -15,6 +15,12 @@ body{
   height: 100vh;
   position: relative;
 }
+#logo {
+   
+    animation: monitorIn 1s ease-in-out forwards; /* assign animation to monitor with 'monitorIn' as keyframe name */
+    opacity: 0;
+    
+     }
 
 #illustration {
     grid-row: 3;
