--- a/sty.css
+++ b/sty.css
@@ -95,3 +95,19 @@ body{
     flex: 100%;
   }
 }
+
+@-webkit-keyframes pulse {to {box-shadow: 0 0 0 20px rgba(9, 187, 233, 0);}}
+@-moz-keyframes pulse {to {box-shadow: 0 0 0 20px rgba(9, 187, 233, 0);}}
+@-ms-keyframes pulse {to {box-shadow: 0 0 0 20px rgba(9, 187, 233, 0);}}
+@keyframes pulse {to {box-shadow: 0 0 0 20px rgba(9, 187, 233, 0);}}
+
+     @keyframes monitorIn {
+    from {
+        transform: translateY(-30px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    } 
