--- a/sty.css
+++ b/sty.css
@@ -11,6 +11,13 @@ body{
   display: flex;
   flex-wrap: wrap;
 }
+
+.center {
+  border: 5px solid;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
 .col{
   flex: 1;
   height: 100vh;
