--- a/sty.css
+++ b/sty.css
@@ -14,8 +14,10 @@ body{
 
 .center {
   border: 5px solid;
-  margin: auto;
-  width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 10px;
 }
 .col{
