--- a/sty.css
+++ b/sty.css
@@ -16,8 +16,7 @@ body{
   border: 5px solid;
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(0, -50%);
   padding: 10px;
 }
 .col{
