--- a/sty.css
+++ b/sty.css
@@ -13,10 +13,9 @@ body{
 }
 
 .center {
-  border: 5px solid;
-  position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+ border: 5px solid;
+  margin: auto;
+  width: 50%;
   padding: 10px;
 }
 .col{
