--- a/sty.css
+++ b/sty.css
@@ -13,9 +13,12 @@ body{
 }
 
 .center {
- border: 5px solid;
-  margin: auto;
-  width: 50%;
+
+  border: 5px solid;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 10px;
 }
 .col{
