--- a/sty.css
+++ b/sty.css
@@ -15,7 +15,7 @@ body{
 .center {
 
   border: 5px solid;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
