--- a/sty.css
+++ b/sty.css
@@ -14,7 +14,8 @@ body{
 
 .center {
 
-  border: 5px solid color: #41A4FF;
+  border: 5px solid;
+  color: #41A4FF;
   position: fixed;
   top: 50%;
   left: 50%;
