--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  border: 3px solid yellow;
+  border: 3px solid green;
   position: relative;
   width: 300px;
   height: 300px;
