--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -25,7 +25,7 @@ body {
 }
 
 .button {
-  background-color: #ddd;
+  background-color: #19191a;
   border: none;
   color: black;
   padding: 10px 20px;
