--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -30,7 +30,8 @@ body {
   color: black;
   padding: 10px 20px;
   text-align: center;
-  text-decoration: none;
+  text-decoration: bold;
+  text-decoration-color: white;
   display: inline-block;
   margin: 4px 2px;
   cursor: pointer;
