--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -30,7 +30,7 @@ body {
   color: black;
   padding: 10px 20px;
   text-align: center;
-  text-decoration: bold;
+  text-decoration: none;
   text-decoration-color: #f7f8fa;
   display: inline-block;
   margin: 4px 2px;
