--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -29,7 +29,7 @@ body {
 .button {
   background-color: #19191a;
   border: none;
-  color: black;
+  color: green;
   padding: 10px 20px;
   text-align: center;
   text-decoration-color: #f7f8fa;
