--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -30,7 +30,7 @@ body {
 .button {
   background-color: #19191a;
   border: none;
-  color: green;
+  color: white;
   padding: 10px 20px;
   text-align: center;
   text-decoration-color: #f7f8fa;
