--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -40,8 +40,10 @@ body {
 
 .button:hover {
   background-color: #226de6;
+}
 
-.instruction
+.instruction {
   padding: 20px;
   position: absolute;
   top: 520px; left: 40px;
+}
