--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -44,6 +44,6 @@ body {
 
 .instruction {
   padding: 20px;
-  position: relative;
-  top: 420px; left: 20px;
+  position: absolute;
+  top: 360px; left: 20px;
 }
