--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -31,7 +31,7 @@ body {
   color: white;
   padding: 10px 20px;
   text-align: center;
-  text-decoration-color: #f7f8fa;
+  text-decoration-color: #ffffff;
   display: inline-block;
   margin: 4px 2px;
   cursor: pointer;
