--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -45,7 +45,7 @@ body {
 .instruction {
   background-color: blue;
  color: #ffffff;
- 
+  padding: 20px;
   position: absolute;
    width: 300px;
   height: 260px;
