--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -27,8 +27,9 @@ body {
 }
 
 .form {
-   background-image: url("awl-bird-300.png");
-  padding: 20px;
+   background: rgba(25, 25, 25, .5);
+    color: white;
+ padding: 20px;
 }
 
 .button {
