--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -27,7 +27,7 @@ body {
 }
 
 .form {
-   background: rgba(5, 5, 5, .9);
+   linear-gradient(rgba(29, 38, 113, 0.8);
     color: white;
  padding: 20px;
 }
