--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -27,7 +27,8 @@ body {
 }
 
 .form {
-   linear-gradient: (rgba(29, 38, 113, 0.8);
+ background: (rgba(29, 38, 113, 0.8);
+  linear-gradient: (rgba(29, 38, 113, 0.8);
     color: white;
  padding: 20px;
 }
