--- a/scratch/scratch.css
+++ b/scratch/scratch.css
@@ -27,8 +27,9 @@ body {
 }
 
 .form {
- background: rgba(29, 38, 113, 0.8);
- color: white;
+     background: -webkit-linear-gradient rgba(29, 38, 113, 0.8);
+
+  color: white;
  padding: 20px;
 }
 
