--- a/scratch/ice/icescratch.css
+++ b/scratch/ice/icescratch.css
@@ -1,6 +1,7 @@
 body {
+background: linear-gradient(to bottom, #2d91c2 0%, #1e528e 100%);
   padding: 20px 0;
-  background-color: lightblue;
+
 }
 
 .container {
