--- a/scratch/ice/icescratch.css
+++ b/scratch/ice/icescratch.css
@@ -1,6 +1,11 @@
 body {
-background: linear-gradient(to bottom, #2d91c2 0%, #1e528e 100%);
+background: #1e528e;
   padding: 20px 0;
+
+}
+main {
+  background: linear-gradient(to bottom, #2d91c2 0%, #1e528e 100%);
+   padding: 20px 0;
 
 }
 
