--- a/scratch/ice/nyf.css
+++ b/scratch/ice/nyf.css
@@ -1,149 +1,124 @@
+$particles: 50;
+$width: 500;
+$height: 500;
+
+// Create the explosion...
+$box-shadow: ();
+$box-shadow2: ();
+@for $i from 0 through $particles {
+  $box-shadow: $box-shadow,
+               random($width)-$width / 2 + px
+               random($height)-$height / 1.2 + px
+               hsl(random(360), 100, 50);
+  $box-shadow2: $box-shadow2, 0 0 #fff
+}
+@mixin keyframes ($animationName) {
+    @-webkit-keyframes #{$animationName} {
+        @content;
+    }
+
+    @-moz-keyframes #{$animationName} {
+        @content;
+    }
+
+    @-o-keyframes #{$animationName} {
+        @content;
+    }
+
+    @-ms-keyframes #{$animationName} {
+        @content;
+    }
+
+    @keyframes #{$animationName} {
+        @content;
+    }
+}
+
+@mixin animation-delay ($settings) {
+    -moz-animation-delay: $settings;
+    -webkit-animation-delay: $settings;
+    -o-animation-delay: $settings;
+    -ms-animation-delay: $settings;
+    animation-delay: $settings;
+}
+
+@mixin animation-duration ($settings) {
+    -moz-animation-duration: $settings;
+    -webkit-animation-duration: $settings;
+    -o-animation-duration: $settings;
+    -ms-animation-duration: $settings;
+    animation-duration: $settings;
+}
+
+@mixin animation ($settings) {
+    -moz-animation: $settings;
+    -webkit-animation: $settings;
+    -o-animation: $settings;
+    -ms-animation: $settings;
+    animation: $settings;
+}
+
+@mixin transform ($settings) {
+    transform: $settings;
+    -moz-transform: $settings;
+    -webkit-transform: $settings;
+    -o-transform: $settings;
+    -ms-transform: $settings;
+}
+
 body {
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  height: 100vh;
+  margin:0;
+  padding:0;
+  background: #000;
   overflow: hidden;
-  display: flex;
-  font-family: "Anton", sans-serif;
-  justify-content: center;
-  align-items: center;
-  perspective: 600px;
 }
 
-div {
-  transform-style: preserve-3d;
-}
-
-.camera {
-  // &.-x {
-  //   transform: rotateX(-60deg);
-  // }
-
-  &.-y {
-    animation: rotate 30s linear infinite;
-  }
-}
-
-.fireworks {
-  transform: translateY(-100px);
-}
-
-.spark {
+.pyro > .before, .pyro > .after {
   position: absolute;
-  width: 400px;
-  height: 400px;
-  // background: rgba(#fff, 0.1);
-  transform-origin: 0 0;
-}
-
-.fire {
-  position: absolute;
-  left: -3px;
   width: 5px;
   height: 5px;
-  background: rgb(250, 40, 40);
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgb(230, 200, 40);
-    transform: translateZ(0.1px);
+  border-radius: 50%;
+  box-shadow: $box-shadow2;
+  @include animation((1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards));
+}
+    
+.pyro > .after {
+  @include animation-delay((1.25s, 1.25s, 1.25s));
+  @include animation-duration((1.25s, 1.25s, 6.25s));
+}
+        
+@include keyframes(bang) {
+  to {
+    box-shadow:$box-shadow;
   }
 }
-
-.line {
-  @for $i from 1 through 200 {
-    &:nth-child(#{$i}) {
-      transform: rotateY(random(360) + 0deg);
-
-      .spark {
-        // transform-origin: random(100) + 0% random(100) + 0%;
-        width: random(200) + 200px;
-        height: random(200) + 200px;
-        animation: spark#{$i} 5s cubic-bezier(0.39, 0.575, 0.565, 1) infinite,
-          opacity 5s ease-out infinite;
-      }
-
-      .fire {
-        animation: fire
-          random(1000) +
-          1000ms
-          random(1000) *
-          -1ms
-          linear
-          infinite;
-      }
-
-      $deg: random(360) + 0deg;
-
-      @keyframes spark#{$i} {
-        0% {
-          transform: translateY(random(150) + 500px);
-        }
-
-        50% {
-          transform: translateY(0);
-        }
-
-        // 100% {
-        //   transform: translateY(0) rotateZ(random(60) + 30deg);
-        // }
-
-        100% {
-          transform: rotateZ($deg) translateX(random(200) + 100px);
-        }
-      }
-    }
-  }
-}
-
-@keyframes opacity {
-  0% {
-    opacity: 0;
-  }
-
-  30% {
-    opacity: 1;
-  }
-
-  40% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  55% {
-    opacity: 1;
-  }
-
-  85% {
-    opacity: 1;
-  }
-
-  100% {
+    
+@include keyframes(gravity)  {
+  to {
+    @include transform(translateY(200px));
     opacity: 0;
   }
 }
-
-@keyframes fire {
-  0% {
-    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    
+@include keyframes(position) {
+  0%, 19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
   }
-
-  100% {
-    transform: rotateX(360deg * 1) rotateY(360deg * 2) rotateZ(360deg * 3);
+  20%, 39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
   }
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotateY(0deg);
+  40%, 59.9% {  
+    margin-top: 20%;
+    margin-left: 70%
   }
-
-  100% {
-    transform: rotateY(360deg);
+  60%, 79.9% {  
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+  80%, 99.9% {  
+    margin-top: 30%;
+    margin-left: 80%;
   }
 }
