--- a/scratch/cute/cutescratch.css
+++ b/scratch/cute/cutescratch.css
@@ -55,7 +55,8 @@ body {
 }
 
 .instruction {
-  background-color: blue;
+  background-color: 
+  background-color: #00BFFF;
  color: #ffffff;
  
   position: absolute;
