--- a/scratch/cute/cong.css
+++ b/scratch/cute/cong.css
@@ -1,8 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Sigmar+One);
 
 body {
-	background: #3da1d1;
-	color: #fff;
+	 background: #f953c6;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #fff;
 	overflow: hidden;
 }
 
