--- a/scratch/ice/cong.css
+++ b/scratch/ice/cong.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Sigmar+One);
 
 body {
-	background: #3da1d1;
+	background: #A9A9A9;
 	color: #fff;
 	overflow: hidden;
 }
